--- a/readme.org
+++ b/readme.org
@@ -138,6 +138,43 @@
     (fset 'yes-or-no-p 'y-or-n-p)
   #+end_src
 * Package
+** Company
+   #+begin_src emacs-lisp
+     (straight-use-package 'company)
+     (straight-use-package 'company-box)
+     (use-package company 
+       :defer 2 
+       :hook (after-init . global-company-mode) 
+       :init (setq company-tooltip-align-annotations t company-idle-delay 0.1 company-echo-delay 0
+		   company-minimum-prefix-length 2 company-require-match nil company-dabbrev-ignore-case
+		   nil company-dabbrev-downcase nil company-show-numbers t) 
+       :config 
+       :bind (:map company-active-map
+		   ("M-n" . nil) 
+		   ("M-p" . nil) 
+		   ("C-n" . #'company-select-next) 
+		   ("C-p" . #'company-select-previous)))
+   #+end_src
+** Lsp(include go)
+   #+begin_src emacs-lisp
+     (straight-use-package 'lsp-mode)
+     (straight-use-package 'go-mode)
+     (use-package lsp-mode
+       :commands lsp
+       :hook ((go-mode) . lsp)
+       :custom
+       (lsp-idle-delay 1200)
+       (lsp-auto-guess-root nil)
+       (lsp-file-watch-threshold 2000)
+       (read-process-output-max (* 1024 1024))
+       (lsp-eldoc-hook nil)
+       (lsp-prefer-flymake nil)
+       :bind (:map lsp-mode-map
+			       ("C-c C-f" . lsp-format-buffer)
+			       ("M-RET" . lsp-ui-sideline-apply-code-actions))
+       :config
+       (setq lsp-prefer-capf t))
+   #+end_src
 ** Ivy
    #+begin_src emacs-lisp
      (straight-use-package 'ivy)
@@ -188,7 +225,7 @@
        :config
        (which-key-mode))
    #+end_src
-** emacs-rime
+** Emacs-rime
    #+begin_src emacs-lisp
      (when (graphic-p)
        (when *is-a-linux*
@@ -201,9 +238,14 @@
 	   (default-input-method "rime")
 	   (rime-show-candidate 'posframe))))
    #+end_src
-** ace-window
+** Ace-window
    #+begin_src emacs-lisp
      (straight-use-package 'ace-window)
      (global-set-key (kbd "M-o") 'ace-window)
      (setq aw-dispatch-always t)
+   #+end_src
+** Exec-path-from-shell
+   #+begin_src emacs-lisp
+     (straight-use-package 'exec-path-from-shell)
+     (exec-path-from-shell-initialize)
    #+end_src
