--- a/readme.org
+++ b/readme.org
@@ -81,19 +81,21 @@
 ** Font
    #+begin_src emacs-lisp
      ;; 字体设置
-     (when (graphic-p)
-       (let ((emacs-font-size 13)
-	     (emacs-font-name "Rec Mono Linear"))
-	 (set-frame-font (format "%s-%s" (eval emacs-font-name) (eval emacs-font-size)) nil t)
-	 (set-fontset-font (frame-parameter nil 'font) 'unicode (eval emacs-font-name)))
-       (with-eval-after-load 'org
-	 (defun org-buffer-face-mode-variable ()
-	   (interactive)
-	   (make-face 'width-font-face)
-	   (set-face-attribute 'width-font-face nil :font "Sarasa Mono SC 15")
-	   (setq buffer-face-mode-face 'width-font-face)
-	   (buffer-face-mode))
-	 (add-hook 'org-mode-hook 'org-buffer-face-mode-variable)))
+     ;;(when (graphic-p)
+     ;;  (let ((emacs-font-size 13)
+     ;;	(emacs-font-name "Rec Mono Linear"))
+     ;;    (set-frame-font (format "%s-%s" (eval emacs-font-name) (eval emacs-font-size)) nil t)
+     ;;    (set-fontset-font (frame-parameter nil 'font) 'unicode (eval emacs-font-name)))
+     ;;  (with-eval-after-load 'org
+     ;;    (defun org-buffer-face-mode-variable ()
+     ;;      (interactive)
+     ;;      (make-face 'width-font-face)
+     ;;      (set-face-attribute 'width-font-face nil :font "Sarasa Mono SC 15")
+     ;;      (setq buffer-face-mode-face 'width-font-face)
+     ;;      (buffer-face-mode))
+     ;;    (add-hook 'org-mode-hook 'org-buffer-face-mode-variable)))
+
+     (set-frame-font "Rec Mono Linear-13" nil t)
 
      (if (version< "27.0" emacs-version)
 	 (set-fontset-font
