--- a/readme.org
+++ b/readme.org
@@ -14,6 +14,10 @@
 #+begin_src shell
   git submodule update --init --recursive
 #+end_src
+* Load
+  #+begin_src emacs-lisp
+    (add-to-list 'load-path "~/.emacs.d/etc/")
+  #+end_src
 * Straight.el
   #+begin_src emacs-lisp
     (defvar bootstrap-version)
@@ -389,3 +393,8 @@
 	       (error "No recognized program file suffix for this file."))))
 	 (run-hooks 'xah-run-current-file-after-hook)))
    #+end_src
+* Exwm
+  #+begin_src emacs-lisp
+    (if (string= (system-name) "KeaiGuixMi")
+	(require 'init-exwm))
+  #+end_src
