--- a/readme.org
+++ b/readme.org
@@ -273,8 +273,8 @@
    #+end_src
 ** Exec-path-from-shell
    #+begin_src emacs-lisp
-     (straight-use-package 'exec-path-from-shell)
-     (exec-path-from-shell-initialize)
+     ;;(straight-use-package 'exec-path-from-shell)
+     ;;(exec-path-from-shell-initialize)
    #+end_src
 ** Xah-run-current-file
    #+begin_src emacs-lisp
