--- a/readme.org
+++ b/readme.org
@@ -111,7 +111,7 @@
      ;;字体设置
      (when (graphic-p)
        (let ((emacs-font-size 13)
-	     (emacs-font-name "Rec Mono Linear"))
+	     (emacs-font-name "Rec Mono Duotone"))
 	 (set-frame-font (format "%s-%s" (eval emacs-font-name) (eval emacs-font-size)) nil t)
 	 (set-fontset-font (frame-parameter nil 'font) 'unicode (eval emacs-font-name)))
        (with-eval-after-load 'org
