--- a/readme.org
+++ b/readme.org
@@ -137,6 +137,9 @@
      (straight-use-package 'modus-operandi-theme)
      (straight-use-package 'modus-vivendi-theme)
      (straight-use-package 'circadian)
+
+     (load-file "~/.emacs.d/site-lisp/nasy-theme.el")
+
      (use-package
        circadian
        :config
@@ -144,15 +147,15 @@
        (setq calendar-latitude 35.388779
 	     calendar-longitude 116.084290)
        ;; sunrise 白天用的主题 sunset 晚上用的主题
-       (setq circadian-themes '((:sunrise . lazycat-light)
-				(:sunset . lazycat-dark)))
+       (setq circadian-themes '((:sunrise . nasy)
+				(:sunset . nasy)))
        (circadian-setup))
 
-      (use-package awesome-tray
-	:load-path "~/.emacs.d/site-lisp/awesome-tray"
-	:init
-	(require 'awesome-tray)
-	(awesome-tray-mode 1))
+     ;;(use-package awesome-tray
+     ;;  :load-path "~/.emacs.d/site-lisp/awesome-tray"
+     ;;  :init
+     ;;  (require 'awesome-tray)
+     ;;  (awesome-tray-mode 1))
 
 
 
