add xah run curreent file

--- a/readme.org
+++ b/readme.org
@@ -50,7 +50,7 @@
      ;;  transparent frame
        (add-to-list 'default-frame-alist'(ns-transparent-titlebar . t))
        (add-to-list 'default-frame-alist'(ns-appearance . dark))
-       (add-to-list 'default-frame-alist'(alpha . (85 . 80)))
+       (add-to-list 'default-frame-alist'(alpha . (90 . 85)))
        (menu-bar-mode -1)
        (scroll-bar-mode -1)
        (global-linum-mode 1)
@@ -393,6 +393,110 @@
        (rime-emacs-module-header-root "~/Downloads")
        (rime-show-candidate 'posframe)
        (default-input-method "rime"))
+   #+end_src
+** Xah-run-current-file
+   #+begin_src emacs-lisp
+     (defvar xah-run-current-file-before-hook nil "Hook for `xah-run-current-file'. Before the file is run.")
+
+     (defvar xah-run-current-file-after-hook nil "Hook for `xah-run-current-file'. After the file is run.")
+
+     (defun xah-run-current-go-file ()
+       "Run or build current golang file.
+
+     To build, call `universal-argument' first.
+
+     Version 2018-10-12"
+       (interactive)
+       (when (not (buffer-file-name)) (save-buffer))
+       (when (buffer-modified-p) (save-buffer))
+       (let* (
+	      ($outputb "*xah-run output*")
+	      (resize-mini-windows nil)
+	      ($fname (buffer-file-name))
+	      ($fSuffix (file-name-extension $fname))
+	      ($progName "go")
+	      $cmdStr)
+	 (setq $cmdStr (concat $progName " \""   $fname "\" &"))
+	 (if current-prefix-arg
+	     (progn
+	       (setq $cmdStr (format "%s build \"%s\" " $progName $fname)))
+	   (progn
+	     (setq $cmdStr (format "%s run \"%s\" &" $progName $fname))))
+	 (progn
+	   (message "running %s" $fname)
+	   (message "%s" $cmdStr)
+	   (shell-command $cmdStr $outputb )
+	   ;;
+	   )))
+
+     (defun xah-run-current-file ()
+       "Execute the current file.
+     For example, if the current buffer is x.py, then it'll call 「python x.py」 in a shell.
+     Output is printed to buffer “*xah-run output*”.
+
+     The file can be Emacs Lisp, PHP, Perl, Python, Ruby, JavaScript, TypeScript, golang, Bash, Ocaml, Visual Basic, TeX, Java, Clojure.
+     File suffix is used to determine what program to run.
+
+     If the file is modified or not saved, save it automatically before run.
+
+     URL `http://ergoemacs.org/emacs/elisp_run_current_file.html'
+     Version 2020-09-24"
+       (interactive)
+       (let (
+	     ($outBuffer "*xah-run output*")
+	     (resize-mini-windows nil)
+	     ($suffixMap
+	      ;; (‹extension› . ‹shell program name›)
+	      `(
+		("php" . "php")
+		("pl" . "perl")
+		("py" . "python")
+		("py3" . ,(if (string-equal system-type "windows-nt") "c:/Python32/python.exe" "python3"))
+		("rb" . "ruby")
+		("go" . "go run")
+		("hs" . "runhaskell")
+		;; ("js" . "node")
+		("js" . "deno run")
+		("ts" . "deno run") ; TypeScript
+		("tsx" . "tsc")
+		("mjs" . "node --experimental-modules ")
+		("sh" . "bash")
+		("clj" . "java -cp ~/apps/clojure-1.6.0/clojure-1.6.0.jar clojure.main")
+		("rkt" . "racket")
+		("ml" . "ocaml")
+		("vbs" . "cscript")
+		("tex" . "pdflatex")
+		("latex" . "pdflatex")
+		("java" . "javac")
+		;; ("pov" . "/usr/local/bin/povray +R2 +A0.1 +J1.2 +Am2 +Q9 +H480 +W640")
+		))
+	     $fname
+	     $fSuffix
+	     $progName
+	     $cmdStr)
+	 (when (not (buffer-file-name)) (save-buffer))
+	 (when (buffer-modified-p) (save-buffer))
+	 (setq $fname (buffer-file-name))
+	 (setq $fSuffix (file-name-extension $fname))
+	 (setq $progName (cdr (assoc $fSuffix $suffixMap)))
+	 (setq $cmdStr (concat $progName " \""   $fname "\" &"))
+	 (run-hooks 'xah-run-current-file-before-hook)
+	 (cond
+	  ((string-equal $fSuffix "el")
+	   (load $fname))
+	  ((string-equal $fSuffix "go")
+	   (xah-run-current-go-file))
+	  ((string-equal $fSuffix "java")
+	   (progn
+	     (shell-command (format "javac %s" $fname) $outBuffer )
+	     (shell-command (format "java %s" (file-name-sans-extension
+					       (file-name-nondirectory $fname))) $outBuffer )))
+	  (t (if $progName
+		 (progn
+		   (message "Running")
+		   (shell-command $cmdStr $outBuffer ))
+	       (error "No recognized program file suffix for this file."))))
+	 (run-hooks 'xah-run-current-file-after-hook)))
    #+end_src
 * Languages
 ** Rust
